# biomechanical-analysis-framework

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ci_env.yaml  ci_env.yml
.github/workflows/: ci.yml  conda-deps.yml
KPI/: LICENSE  README.md  pyproject.toml
KPI/code/baf_kpi/: interSubjectsAnalysis.py  main.py  mainNiosh.py  mainTest.py  mainVisualize.py  test.py
KPI/code/baf_kpi/compare/: comparison.py
KPI/code/baf_kpi/configs/: config.json  configNiosh.json  configVisualize.json
KPI/code/baf_kpi/scripts/: computeCOP.py  computeLiftingEnergyConsumption.py  computePathLength.py  computeStepSelection.py  computeSwingLegAngularVelocity.py  computeVectorNormalization.py  getKPIreferenceParameters.py  saveKPI.py
KPI/code/baf_kpi/visualize/: visualizeModel.py
baf_kpi/: README.md  pyproject.toml
baf_kpi/code/baf_kpi/: main.py
baf_kpi/code/baf_kpi/configs/: config.json
baf_kpi/code/baf_kpi/dataLoader/: dataLoaderBAF.py  dataLoaderFilteredBAF.py  dataLoaderHDE.py
baf_kpi/code/baf_kpi/scripts/: adaptiveContactPatternDetection.py  cell2iDynTreeStringVector.py  computeBaseTransformWrtWorldBAF.py  computeBaseTransformWrtWorldHDE.py  computeCOM.py  computeCycleDuration.py  computeNioshKPI.py  computeStanceAndSwingPercentage.py  computeStrideLength.py  computeSwingWidth.py  contactPatternDetection.py  filterData.py  getSensorToLinkMap.py  loadKPIreferenceParameters.py  quat2mat.py  removeShoesOffset.py  setPaths.py  updateCOM.py  updateCOP.py  updateEffort.py
baf_kpi/code/baf_kpi/visualize/: visualizeKPI.py  visualizeLegSkeleton.py  visualizeModel.py
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  biomechanical_analysis_framework.cpp.in
bindings/python/ID/: CMakeLists.txt
bindings/python/ID/include/BiomechanicalAnalysis/bindings/ID/: InverseDynamics.h  Module.h
bindings/python/ID/src/: InverseDynamics.cpp  Module.cpp
bindings/python/IK/: CMakeLists.txt
bindings/python/IK/include/BiomechanicalAnalysis/bindings/IK/: InverseKinematics.h  Module.h
bindings/python/IK/src/: InverseKinematics.cpp  Module.cpp
bindings/python/type_caster/: CMakeLists.txt
cmake/: AddBiomechanicalAnalysisFrameworkTarget.cmake  AddBiomechanicalAnalysisLibrary.cmake  AddBiomechanicalAnalysisPythonModule.cmake  AddBiomechanicalAnalysisUnitTest.cmake  BiomechanicalAnalysisFrameworkDependencies.cmake  BiomechanicalAnalysisFrameworkFindDependencies.cmake  Framework.h.in
examples/: test_IK.py  test_IK.toml
src/: CMakeLists.txt
src/Conversions/: CMakeLists.txt
src/Conversions/include/BiomechanicalAnalysis/Conversions/: CommonConversions.h
src/DataSources/: CMakeLists.txt
src/DataSources/include/BiomechanicalAnalysis/DataSources/: Acceleration6D.h  AngularAcceleration.h  AngularVelocity.h  Force6D.h  LinearAcceleration.h  LinearVelocity.h  Orientation.h  Pose.h  Position.h  Velocity6D.h
src/DynamicalIK/: CMakeLists.txt
src/DynamicalIK/include/BiomechanicalAnalysis/DynamicalIK/: Constraint.h  FloorContact.h  InverseVelocityKinematics.h  StdTarget.h  Target.h
src/DynamicalIK/src/: InverseVelocityKinematics.cpp  StdTarget.cpp
src/Examples/: CMakeLists.txt  wearables_example.cpp
src/ID/: CMakeLists.txt
src/ID/include/BiomechanicalAnalysis/ID/: InverseDynamics.h
src/ID/src/: InverseDynamics.cpp
src/ID/tests/: CMakeLists.txt  HumanIDTest.cpp  configTestID.ini  configTestID.toml  extWrenchesConfig.ini  jointTorquesConfig.ini
src/IK/: CMakeLists.txt
src/IK/include/BiomechanicalAnalysis/IK/: HumanStateSource.h  IntegrationBasedSolver.h  InverseKinematic.h  InverseKinematics.h  Solver.h
src/IK/src/: InverseKinematic.cpp  InverseKinematics.cpp
src/IK/tests/: CMakeLists.txt  ConfigFolderPath.h.in  HumanIKTest.cpp  configTestIK.ini  configTestIK.toml  configTestIKTEST.toml  floorContactTaskTest.ini  gravityTaskTest.ini
src/Logging/: CMakeLists.txt
src/Logging/YarpImplementation/: CMakeLists.txt
src/Logging/YarpImplementation/include/BiomechanicalAnalysis/Logging/: YarpLogger.h
src/Logging/YarpImplementation/src/: YarpLogger.cpp
src/Logging/include/BiomechanicalAnalysis/Logging/: Logger.h
src/Logging/src/: Logger.cpp
src/Logging/tests/: CMakeLists.txt  DefaultLoggerTest.cpp
src/WearablesImplementation/: CMakeLists.txt
src/WearablesImplementation/include/BiomechanicalAnalysis/WearablesImplementation/DataSources/: Force6DSensor.h  VirtualLinkSensor.h
src/WearablesImplementation/src/: Force6DSensor.cpp  VirtualLinkSensor.cpp
src/examples/: CMakeLists.txt
src/examples/ID/: CMakeLists.txt  configExampleID.ini  exampleID.cpp  extWrenchesConfig.ini
src/examples/IK/: CMakeLists.txt  ConfigFolderPath.h.in  exampleIK.cpp  exampleIK.ini
