[project]
name = "baf-kpi"
version = "0.2.1"   # The version of this python package should be aligned with the version number in  "https://github.com/ami-iit/biomechanical-analysis-framework/blob/main/CMakeLists.txt#L10"
description = "Python project to compute KPI parameters"
license.file = "LICENSE"
dependencies = ["numpy", "matplotlib", "pandas", "scipy", "h5py", "idyntree", "rich", "joblib", "meshcat", "resolve-robotics-uri-py"]


[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
]

[tool.setuptools]
package-dir = { "" = "code" }

[project.scripts]
baf-kpi-analyzer = "baf_kpi.main:main"


